springlearning/yaml-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springlearning-ingress
  namespace: springlearning
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: springlearning.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springlearning-service
            port:
              number: 80
